--- a/mypod.yml
+++ b/mypod.yml
@@ -1,10 +1,12 @@
-apiVersion: apps/v1
+---
+apiVersion: v1
 kind: Pod
 metadata:
- name: mypod
+ name: endproject-pod
  labels:
-  app: mypod
+  type: webapp
+  author: mrtienvu
 spec:
  containers:
-  - name: mypod
+  - name: endproject-pod
     image: mrtienvu/endprojectimage:latest
