Update and rename deployment3.yml to deployment.yml

--- a/deployment.yml
+++ b/deployment.yml
@@ -33,3 +33,6 @@ spec:
       containers:
         - name: myendproject
           image: mrtienvu/endprojectimage
+          resources:
+            limits:
+              cpu: 20m
