--- a/deployment.yml
+++ b/deployment.yml
@@ -1,15 +1,16 @@
 ---
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
   name: myendproject-service
 spec:
+  type: ClusterIP
   selector:
     app: myendproject
   ports:
-  - protocol: TCP
-    port: 8080
-
+   - protocol: TCP
+     port: 8088
+     targetPort: 8088
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -33,4 +34,4 @@ spec:
           image: mrtienvu/endprojectimage
           resources:
             limits:
-              cpu: 10m
+              cpu: 20m
